# FIWARE-DDS-Enabler

./: .gitignore  .gitmodules  README.md  ddsenabler.repos  generate_types.sh  install_dds_module.sh  readthedocs.yaml
.dev/: README.md
ddsenabler/: CMakeLists.txt  DDS_ENABLER_CONFIGURATION.json  DDS_ENABLER_CONFIGURATION.yaml  Doxyfile.in  package.xml  project_settings.cmake
ddsenabler/docs/doxygen/pages/: doxygen-awesome-sidebar-only.css  eprosima_footer.html  eprosima_header.html
ddsenabler/examples/: CLIParser.hpp  CMakeLists.txt  config.json  config.yml  main.cpp  utils.hpp
ddsenabler/include/ddsenabler/: CallbackSet.hpp  DDSEnabler.hpp  dds_enabler_runner.hpp
ddsenabler/src/cpp/: DDSEnabler.cpp  dds_enabler_runner.cpp
ddsenabler/test/: CMakeLists.txt  DDSEnablerTester.hpp  DdsEnablerTest.cpp  update_generated_code_from_idl.sh
ddsenabler/test/ddsEnablerTests/: CMakeLists.txt  DdsEnablerTest.cpp  ReloadConfig.cpp
ddsenabler/test/ddsEnablerTests/types/: DDSEnablerTestTypes.hpp  DDSEnablerTestTypesCdrAux.ipp  DDSEnablerTestTypesPubSubTypes.cxx  DDSEnablerTestTypesPubSubTypes.hpp  DDSEnablerTestTypesTypeObjectSupport.cxx
ddsenabler/test/ddsEnablerTypedTests/: CMakeLists.txt  DdsEnablerTypedTest.cpp  DdsEnablerTypedTestTypeHeaders.hpp  update_header_and_create_cases.py
ddsenabler/test/ddsEnablerTypedTests/types/: aliases.hpp  annotations.hpp  appendable.hpp  arrays.hpp  bitsets.hpp  constants.hpp  constantsPubSubTypes.hpp  declarations.hpp  declarationsPubSubTypes.hpp  enumerations.hpp  enumerationsPubSubTypes.hpp  external.hpp  final.hpp  finalPubSubTypes.hpp  inheritance.hpp  key.hpp  maps.hpp  mapsPubSubTypes.hpp  member_id.hpp  mutable.hpp  optional.hpp  primitives.hpp  sequences.hpp  strings.hpp  structures.hpp  structuresPubSubTypes.hpp  unions.hpp
ddsenabler/test/ddsEnablerTypedTests/types/helpers/: basic_inner_types.hpp
ddsenabler/test/resources/: update_generated_code_from_idl.sh
ddsenabler/test/resources/types/: DDSEnablerTestTypes.hpp
ddsenabler/test/test_files/: test_service.json
ddsenabler_docs/: CMakeLists.txt  README.md  package.xml  project_settings.cmake  readthedocs.yaml
ddsenabler_docs/code/: Doxyfile.in
ddsenabler_docs/docs/: conf.py  index.rst  spelling_wordlist.txt
ddsenabler_docs/docs/02-formalia/: titlepage.rst
ddsenabler_docs/docs/_templates/sidebar/: commercial-support.html
ddsenabler_docs/docs/ddsenabler/api_reference/: api_reference.rst
ddsenabler_docs/docs/ddsenabler/api_reference/callback_set/: callback_set.rst
ddsenabler_docs/docs/ddsenabler/api_reference/dds_callbacks/: cb_callbacks.rst  dds_callbacks.rst
ddsenabler_docs/docs/ddsenabler/api_reference/dds_enabler/: dds_enabler.rst
ddsenabler_docs/docs/exports/: alias.include
ddsenabler_docs/docs/formalia/: titlepage.rst
ddsenabler_docs/docs/notes/: notes.rst
ddsenabler_docs/docs/user_manual/: configuration.rst  operation_modes.rst
ddsenabler_docs/test/: CMakeLists.txt
ddsenabler_participants/: CMakeLists.txt  package.xml  project_settings.cmake
ddsenabler_participants/include/ddsenabler_participants/: CBCallbacks.hpp  CBHandler.hpp  CBMessage.hpp  CBPublisher.hpp  CBWriter.hpp  DDSEnablerLogConsumer.hpp  DDSEnablerParticipant.hpp  DdsParticipant.hpp  DynamicTypesSerializer.hpp  EnablerParticipant.hpp  EnablerParticipantConfiguration.hpp  InternalRpcReader.hpp  KnownType.hpp  RpcStructs.hpp  RpcUtils.hpp  constants.hpp  serialization.hpp
ddsenabler_participants/include/ddsenabler_participants/types/: CBMessage.hpp  KnownType.hpp
ddsenabler_participants/include/ddsenabler_participants/types/dynamic_types_collection/: DynamicTypesCollection.hpp  DynamicTypesCollection.idl  DynamicTypesCollectionCdrAux.hpp  DynamicTypesCollectionPubSubTypes.hpp  DynamicTypesCollectionTypeObjectSupport.hpp
ddsenabler_participants/src/cpp/: CBHandler.cpp  CBMessage.cpp  CBPublisher.cpp  CBWriter.cpp  DDSEnablerLogConsumer.cpp  DDSEnablerParticipant.cpp  DDSHelperLogConsumer.cpp  DdsParticipant.cpp  DynamicTypeSerializer.cpp  EnablerParticipant.cpp  RpcUtils.cpp  serialization.cpp
ddsenabler_participants/src/cpp/types/dynamic_types_collection/: DynamicTypesCollectionCdrAux.hpp  DynamicTypesCollectionCdrAux.ipp  DynamicTypesCollectionPubSubTypes.cxx  DynamicTypesCollectionTypeObjectSupport.cxx
ddsenabler_participants/test/: CMakeLists.txt  DdsEnablerParticipantsTest.cpp
ddsenabler_participants/test/types/: DDSEnablerTestTypes.idl  DDSEnablerTestTypesCdrAux.hpp  DDSEnablerTestTypesTypeObjectSupport.hpp
ddsenabler_test/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
ddsenabler_test/compose/: CMakeLists.txt  README.md  docker-compose.sh
ddsenabler_test/compose/scripts/: execute_and_validate_client.py  execute_and_validate_listener.py  execute_and_validate_server.py  execute_and_validate_subscriber.py  execute_and_validate_talker.py  log.py  utils.py  validation.py
ddsenabler_test/compose/scripts/ros2_nodes/: node_main.py
ddsenabler_test/compose/test_cases/actions/: run_action_server_timeout.sh
ddsenabler_test/compose/test_cases/actions/action_client/: compose.yml
ddsenabler_test/compose/test_cases/actions/action_client_cancel/: compose.yml
ddsenabler_test/compose/test_cases/actions/action_discovery/: compose.yml
ddsenabler_test/compose/test_cases/actions/action_server/: compose.yml
ddsenabler_test/compose/test_cases/publish/discovered_type/: compose.yml  config.yml
ddsenabler_test/compose/test_cases/publish/requested_type/: compose.yml  config.yml
ddsenabler_test/compose/test_cases/reception/topics_json/: compose.yml  config.json
ddsenabler_test/compose/test_cases/services/: run_service_server_timeout.sh
ddsenabler_test/compose/test_cases/topics/: compose.yml  config.json  config.yml
ddsenabler_test/compose/test_cases/topics_json/: compose.yml  config.json
ddsenabler_test/compose/test_cases/topics_yaml/: compose.yml
ddsenabler_test/ddsenabler_test_app/: CMakeLists.txt  actions.hpp  main.cpp  services.hpp  tester.hpp
ddsenabler_test/ddsenabler_test_app/test_files/: test_action.json  test_service.json
(+54 files in other folders)
