<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsenabler_docs</name>
  <version>0.1.0</version>
  <description>
     *eprosima DDS Enabler* Documentation built with sphinx and deployed in ReadTheDocs.
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="eugeniocollado@eprosima.com">Eugenio Collado</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <maintainer email="javiergil@eprosima.com">Javier Gil</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/FIWARE-DDS-Enabler/issues</url>
  <url type="repository">https://github.com/eProsima/FIWARE-DDS-Enabler</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cmake_utils</depend>
  <depend>Sphinx</depend>
  <depend>ddsenabler</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
