<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsenabler_participants</name>
  <version>1.0.0</version>
  <description>
     *eprosima DDS Enabler* C++ library.
  </description>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>fastdds</depend>
  <depend>ddspipe_core</depend>
  <depend>ddspipe_participants</depend>
  <depend>cmake_utils</depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>